# flame_ros

./: CMakeLists.txt  README.md  flame_ros_nodelets.xml  flame_ros_plugins.xml  package.xml
.circleci/: config.yml
cfg/: flame.rviz  flame_nodelet.yaml  flame_offline_asl.yaml  flame_offline_tum.yaml  kinect.yaml
launch/: flame_nodelet.launch  flame_offline_asl.launch  flame_offline_tum.launch  frames.launch
msg/: FlameNodeletStats.msg  FlameStats.msg
scripts/: Dockerfile  flame_docker_example.sh
src/: CMakeLists.txt  flame_nodelet.cc  flame_offline_asl.cc  flame_offline_tum.cc  utils.cc  utils.h
src/dataset_utils/: utils.cc  utils.h
src/dataset_utils/asl/: dataset.h  types.h
src/flame_rviz_plugins/: surface_normals_visual.cc  surface_normals_visual.h  textured_mesh_display.cc  textured_mesh_display.h  textured_mesh_visual.cc  textured_mesh_visual.h  visual.h
src/ros_sensor_streams/: asl_rgbd_offline_stream.cc  asl_rgbd_offline_stream.h  conversions.h  thread_safe_queue.h  tracked_image_stream.cc  tracked_image_stream.h  tum_rgbd_offline_stream.cc  tum_rgbd_offline_stream.h
